--- a/124361.html
+++ b/124361.html
@@ -20,7 +20,7 @@
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
       <!-- per-player tab to be cloned -->
       <div class="tabs-panel" id="_player_">
-        <div class="grid-container" id="container">
+        <div class="grid-container">
           <div class="grid-x grid-padding-x">&nbsp;</div>
           <!-- amount of money -->
           <div class="grid-x grid-padding-x">
@@ -45,8 +45,8 @@
           <!-- number of houses -->
           <div class="grid-x grid-padding-x">
             <div class="small-9 cell">
-              <label lang="en" for="houses" class="text-right middle">Number of Houses (except Brick)</label>
-              <label lang="fr" for="houses" class="text-right middle">Nombre de maisons (sauf Brique)</label>
+              <label lang="en" for="houses" class="text-right middle">Number of Houses (except&nbsp;Brick)</label>
+              <label lang="fr" for="houses" class="text-right middle">Nombre de maisons (sauf&nbsp;Brique)</label>
             </div>
             <div class="small-3 cell">
               <select id="houses" data-init="0/0/15" data-index="03"><!-- dynamic --></select>
@@ -113,9 +113,9 @@
             </div>
           </div>
           <!-- only with the corresponding minerva card -->
-          <div class="secondary callout text-center">
+          <div class="small secondary callout text-center">
             <span lang="en">Minerva Card Only!</span>
-            <span lang="fr">Uniquement avec la carte Minerva !</span>
+            <span lang="fr">Uniquement avec la carte Minerva&nbsp;!</span>
             <p>&nbsp;</p>
             <!-- number of brick houses -->
             <div class="grid-x grid-padding-x">
