--- a/215471.html
+++ b/215471.html
@@ -224,6 +224,27 @@
             </tr>
           </tbody>
         </table>
+        <!-- filmstrip of regret -->
+        <div class="grid-container">
+          <div class="grid-x grid-padding-x">
+            <div class="small-9 cell">
+              <label lang="en" for="regret" class="text-right middle">Filmstrip of Regret</label>
+              <label lang="fr" for="regret" class="text-right middle">S&eacute;quence abandonn&eacute;e</label>
+            </div>
+            <div class="small-3 cell">
+              <select id="regret">
+                <option value="0" selected="selected"></option>
+                <option value="1" class="color1">1</option>
+                <option value="2" class="color2">2</option>
+                <option value="3" class="color3">3</option>
+                <option value="4" class="color4">4</option>
+                <option value="5" class="color5">5</option>
+                <option value="6" class="color6">6</option>
+                <option value="7" class="color7">7</option>
+              </select>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- tab for results -->
       <div class="tabs-panel" id="results">
@@ -246,7 +267,7 @@
         </table>
         <p>&nbsp;</p>
         <p lang="en"><i>Tie breaker</i>:
-          number of good shots then longest film strip.
+          number of good shots then longest filmstrip.
         </p>
         <p lang="fr"><i>D&eacute;partage en cas d'&eacute;galit&eacute;</i>:
           nombre de bonnes s&eacute;ries puis s&eacute;quence la plus longue.
