--- a/216132.html
+++ b/216132.html
@@ -20,7 +20,7 @@
     <div class="tabs-content" data-tabs-content="tabs" id="tabs-content">
       <!-- per-player tab to be cloned -->
       <div class="tabs-panel" id="_player_">
-        <div class="grid-container" id="container">
+        <div class="grid-container">
           <div class="grid-x grid-padding-x">&nbsp;</div>
           <!-- glory track -->
           <div class="grid-x grid-padding-x">
