updated the favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="corlio"/>
+    <meta name="description" content="BoardGame Score Sheet (BGSS)"/>
+    <meta name="keywords" content="bgss,board,boardgame,game,score,sheet,results,winner,tie,victory,points"/>
+    <meta name="identifier-url" content="https://corlio.github.io/bgss/"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <title>BGSS</title>
     <link rel="stylesheet" href="css/foundation.min.css"/>
