--- a/124361.html
+++ b/124361.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="money" class="text-right middle">Argent (Sesterces)</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="money" min="0" data-index="01">
+              <input type="number" id="money" min="0">
             </div>
           </div>
           <!-- number of jupiter cards -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="jupiter" class="text-right middle">Nombre de cartes Jupiter</label>
             </div>
             <div class="small-3 cell">
-              <select id="jupiter" data-init="2/2/10" data-index="02"><!-- dynamic --></select>
+              <input type="number" id="jupiter" min="2" max="10">
             </div>
           </div>
           <!-- number of houses -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="houses" class="text-right middle">Nombre de maisons (sauf&nbsp;Brique)</label>
             </div>
             <div class="small-3 cell">
-              <select id="houses" data-init="0/0/15" data-index="03"><!-- dynamic --></select>
+              <input type="number" id="houses" min="0" max="15">
             </div>
           </div>
           <!-- number of saturnus cards -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="saturnus" class="text-right middle">Nombre de cartes Saturnus</label>
             </div>
             <div class="small-3 cell">
-              <select id="saturnus" data-init="2/2/9" data-index="04"><!-- dynamic --></select>
+              <input type="number" id="saturnus" min="2" max="9">
             </div>
           </div>
           <!-- number of provinces -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="provinces" class="text-right middle">Nombre de provinces</label>
             </div>
             <div class="small-3 cell">
-              <select id="provinces" data-init="0/0/12" data-index="05"><!-- dynamic --></select>
+              <input type="number" id="provinces" min="0" max="12">
             </div>
           </div>
           <!-- number of mercurius cards -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="mercurius" class="text-right middle">Nombre de cartes Mercurius</label>
             </div>
             <div class="small-3 cell">
-              <select id="mercurius" data-init="1/1/6" data-index="06"><!-- dynamic --></select>
+              <input type="number" id="mercurius" min="1" max="6">
             </div>
           </div>
           <!-- number of types of goods -->
@@ -89,7 +89,7 @@
               <label lang="fr" for="types" class="text-right middle">Nombre de types de marchandises</label>
             </div>
             <div class="small-3 cell">
-              <select id="types" data-init="0/0/5" data-index="07"><!-- dynamic --></select>
+              <input type="number" id="types" min="0" max="5">
             </div>
           </div>
           <!-- number of mars cards -->
@@ -99,7 +99,7 @@
               <label lang="fr" for="mars" class="text-right middle">Nombre de cartes Mars</label>
             </div>
             <div class="small-3 cell">
-              <select id="mars" data-init="1/1/6" data-index="08"><!-- dynamic --></select>
+              <input type="number" id="mars" min="1" max="6">
             </div>
           </div>
           <!-- number of colonists -->
@@ -109,7 +109,7 @@
               <label lang="fr" for="colonists" class="text-right middle">Nombre de colons</label>
             </div>
             <div class="small-3 cell">
-              <select id="colonists" data-init="2/2/6" data-index="09"><!-- dynamic --></select>
+              <input type="number" id="colonists" min="2" max="6">
             </div>
           </div>
           <!-- only with the corresponding minerva card -->
@@ -124,7 +124,7 @@
                 <label lang="fr" for="brick" class="text-right middle">Nombre de maisons "brique"</label>
               </div>
               <div class="small-3 cell">
-                <select id="brick" data-init="0/0/15" data-index="10"><!-- dynamic --></select>
+                <input type="number" id="brick" min="0" max="15">
               </div>
             </div>
             <!-- number of food houses -->
@@ -134,7 +134,7 @@
                 <label lang="fr" for="food" class="text-right middle">Nombre de maisons "bl&eacute;"</label>
               </div>
               <div class="small-3 cell">
-                <select id="food" data-init="0/0/15" data-index="11"><!-- dynamic --></select>
+                <input type="number" id="food" min="0" max="15">
               </div>
             </div>
             <!-- number of tool houses -->
@@ -144,7 +144,7 @@
                 <label lang="fr" for="tool" class="text-right middle">Nombre de maisons "outil"</label>
               </div>
               <div class="small-3 cell">
-                <select id="tool" data-init="0/0/15" data-index="12"><!-- dynamic --></select>
+                <input type="number" id="tool" min="0" max="15">
               </div>
             </div>
             <!-- number of wine houses -->
@@ -154,7 +154,7 @@
                 <label lang="fr" for="wine" class="text-right middle">Nombre de maisons "vin"</label>
               </div>
               <div class="small-3 cell">
-                <select id="wine" data-init="0/0/15" data-index="13"><!-- dynamic --></select>
+                <input type="number" id="wine" min="0" max="15">
               </div>
             </div>
             <!-- number of cloth houses -->
@@ -164,7 +164,7 @@
                 <label lang="fr" for="cloth" class="text-right middle">Nombre de maisons "tissu"</label>
               </div>
               <div class="small-3 cell">
-                <select id="cloth" data-init="0/0/15" data-index="14"><!-- dynamic --></select>
+                <input type="number" id="cloth" min="0" max="15">
               </div>
             </div>
           </div>
