--- a/164928.html
+++ b/164928.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="coins" class="text-right middle">Nombre de pi&egrave;ces</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="coins" min="0" data-index="01">
+              <input type="number" id="coins" min="0">
             </div>
           </div>
           <!-- number of grain -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="grain" class="text-right middle">Nombre de tuiles c&eacute;r&eacute;ales</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="grain" min="0" data-index="02">
+              <input type="number" id="grain" min="0">
             </div>
           </div>
           <!-- number of cheese -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="cheese" class="text-right middle">Nombre de tuiles fromage</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="cheese" min="0" data-index="03">
+              <input type="number" id="cheese" min="0">
             </div>
           </div>
           <!-- number of wine -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="wine" class="text-right middle">Nombre de tuiles vin</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="wine" min="0" data-index="04">
+              <input type="number" id="wine" min="0">
             </div>
           </div>
           <!-- number of wool -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="wool" class="text-right middle">Nombre de tuiles laine</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="wool" min="0" data-index="05">
+              <input type="number" id="wool" min="0">
             </div>
           </div>
           <!-- number of brocade -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="brocade" class="text-right middle">Nombre de tuiles brocard</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="brocade" min="0" data-index="06">
+              <input type="number" id="brocade" min="0">
             </div>
           </div>
           <!-- number of citizens -->
@@ -89,7 +89,7 @@
               <label lang="fr" for="citizens" class="text-right middle">Nombre de citoyens</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="citizens" min="0" data-index="07">
+              <input type="number" id="citizens" min="0">
             </div>
           </div>
           <!-- number of trading stations -->
@@ -99,7 +99,7 @@
               <label lang="fr" for="stations" class="text-right middle">Nombre de postes de commerce</label>
             </div>
             <div class="small-3 cell">
-              <select id="stations" data-init="0/0/10" data-index="08"><!-- dynamic --></select>
+              <input type="number" id="stations" min="0" max="10">
             </div>
           </div>
           <!-- development status -->
@@ -109,7 +109,7 @@
               <label lang="fr" for="development" class="text-right middle">Niveau de d&eacute;veloppement</label>
             </div>
             <div class="small-3 cell">
-              <select id="development" data-init="1/1/6" data-index="09"><!-- dynamic --></select>
+              <input type="number" id="development" min="1" max="6">
             </div>
           </div>
           <!-- extra VPs (extensions) -->
@@ -119,7 +119,7 @@
               <label lang="fr" for="extra" class="text-right middle">PV suppl&eacute;mentaires</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="extra" data-index="10">
+              <input type="number" id="extra">
             </div>
           </div>
         </div>
