--- a/169786.html
+++ b/169786.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="coins" class="text-right middle">Nombre de pi&egrave;ces</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="coins" min="0" data-index="01">
+              <input type="number" id="coins" min="0">
             </div>
           </div>
           <!-- popularity -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="popularity" class="text-right middle">Niveau de popularit&eacute;</label>
             </div>
             <div class="small-3 cell">
-              <select id="popularity" data-init="0/0/18" data-index="02"><!-- dynamic --></select>
+              <input type="number" id="popularity" min="0" max="18">
             </div>
           </div>
           <!-- number of stars -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="stars" class="text-right middle">Nombre d'&eacute;toiles</label>
             </div>
             <div class="small-3 cell">
-              <select id="stars" data-init="0/0/6" data-index="03"><!-- dynamic --></select>
+              <input type="number" id="stars" min="0" max="6">
             </div>
           </div>
           <!-- number of controlled territories -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="territories" class="text-right middle">Nombre de territoires</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="territories" min="0" data-index="04">
+              <input type="number" id="territories" min="0">
             </div>
           </div>
           <!-- number of resources -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="resources" class="text-right middle">Nombre de ressources</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="resources" min="0" data-index="05">
+              <input type="number" id="resources" min="0">
             </div>
           </div>
           <!-- structure bonus tile -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="bonus" class="text-right middle">PV du bonus b&acirc;timent</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="bonus" min="0" data-index="06">
+              <input type="number" id="bonus" min="0">
             </div>
           </div>
         </div>
