--- a/193738.html
+++ b/193738.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="money" class="text-right middle">Argent (&dollar;)</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="money" min="0" data-index="01">
+              <input type="number" id="money" min="0">
             </div>
           </div>
           <!-- VPs from buildings -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="buildings" class="text-right middle">PV des b&acirc;timents</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="buildings" min="0" data-index="02">
+              <input type="number" id="buildings" min="0">
             </div>
           </div>
           <!-- VPs from cities -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="cities" class="text-right middle">PV des villes</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="cities" data-index="03">
+              <input type="number" id="cities">
             </div>
           </div>
           <!-- VPs from train stations -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="stations" class="text-right middle">PV des gares</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="stations" min="0" data-index="04">
+              <input type="number" id="stations" min="0">
             </div>
           </div>
           <!-- VPs from hazard tiles -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="hazard" class="text-right middle">PV des tuiles danger</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="hazard" min="0" data-index="05">
+              <input type="number" id="hazard" min="0">
             </div>
           </div>
           <!-- VPs from cattle cards -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="cattle" class="text-right middle">PV des cartes b&eacute;tail</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="cattle" min="0" data-index="06">
+              <input type="number" id="cattle" min="0">
             </div>
           </div>
           <!-- VPs from objective cards -->
@@ -89,7 +89,7 @@
               <label lang="fr" for="objective" class="text-right middle">PV des cartes objectif</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="objective" data-index="07">
+              <input type="number" id="objective">
             </div>
           </div>
           <!-- VPs from station master tiles -->
@@ -99,7 +99,7 @@
               <label lang="fr" for="master" class="text-right middle">PV des tuiles chef de gare</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="master" min="0" data-index="08">
+              <input type="number" id="master" min="0">
             </div>
           </div>
           <!-- number of workers in last 2 columns -->
@@ -113,7 +113,7 @@
               </label>
             </div>
             <div class="small-3 cell">
-              <select id="workers" data-init="0/0/6" data-index="09"><!-- dynamic --></select>
+              <input type="number" id="workers" min="0" max="6">
             </div>
           </div>
           <!-- player board bonus disc -->
