--- a/31260.html
+++ b/31260.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="plowed" class="text-right middle">Nombre de champs labour&eacute;s</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="plowed" min="0" data-index="01">
+              <input type="number" id="plowed" min="0">
             </div>
           </div>
           <!-- number of fenced pastures -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="pastures" class="text-right middle">Nombre de p&acirc;turages clos</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="pastures" min="0" data-index="02">
+              <input type="number" id="pastures" min="0">
             </div>
           </div>
           <!-- number of grain -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="grain" class="text-right middle">Nombre de c&eacute;r&eacute;ales</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="grain" min="0" data-index="03">
+              <input type="number" id="grain" min="0">
             </div>
           </div>
           <!-- number of vegetables -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="vegetables" class="text-right middle">Nombre de l&eacute;gumes</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="vegetables" min="0" data-index="04">
+              <input type="number" id="vegetables" min="0">
             </div>
           </div>
           <!-- number of sheep -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="sheep" class="text-right middle">Nombre de moutons</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="sheep" min="0" data-index="05">
+              <input type="number" id="sheep" min="0">
             </div>
           </div>
           <!-- number of wild boar -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="boar" class="text-right middle">Nombre de sangliers</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="boar" min="0" data-index="06">
+              <input type="number" id="boar" min="0">
             </div>
           </div>
           <!-- number of cattle -->
@@ -89,7 +89,7 @@
               <label lang="fr" for="cattle" class="text-right middle">Nombre de b&oelig;ufs</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="cattle" min="0" data-index="07">
+              <input type="number" id="cattle" min="0">
             </div>
           </div>
           <!-- number of unused spaces -->
@@ -99,7 +99,7 @@
               <label lang="fr" for="unused" class="text-right middle">Nombre de cases inutilis&eacute;s</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="unused" min="0" data-index="08">
+              <input type="number" id="unused" min="0">
             </div>
           </div>
           <!-- number of fenced stables -->
@@ -109,7 +109,7 @@
               <label lang="fr" for="stables" class="text-right middle">Nombre d'&eacute;tables cl&ocirc;tur&eacute;es</label>
             </div>
             <div class="small-3 cell">
-              <select id="stables" data-init="0/0/4" data-index="09"><!-- dynamic --></select>
+              <input type="number" id="stables" min="0" max="4">
             </div>
           </div>
           <!-- number of clay rooms -->
@@ -119,7 +119,7 @@
               <label lang="fr" for="clay" class="text-right middle">Nombre de pi&egrave;ces en argile</label>
             </div>
             <div class="small-3 cell">
-              <select id="clay" data-init="0/0/5" data-index="10"><!-- dynamic --></select>
+              <input type="number" id="clay" min="0" max="5">
             </div>
           </div>
           <!-- number of stone rooms -->
@@ -129,7 +129,7 @@
               <label lang="fr" for="stone" class="text-right middle">Nombre de pi&egrave;ces en pierre</label>
             </div>
             <div class="small-3 cell">
-              <select id="stone" data-init="0/0/5" data-index="11"><!-- dynamic --></select>
+              <input type="number" id="stone" min="0" max="5">
             </div>
           </div>
           <!-- number of family members -->
@@ -139,7 +139,7 @@
               <label lang="fr" for="family" class="text-right middle">Nombre de membres de la famille</label>
             </div>
             <div class="small-3 cell">
-              <select id="family" data-init="2/2/5" data-index="12"><!-- dynamic --></select>
+              <input type="number" id="family" min="2" max="5">
             </div>
           </div>
           <!-- card points -->
@@ -149,7 +149,7 @@
               <label lang="fr" for="card" class="text-right middle">PV des cartes </label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="card" min="0" data-index="13">
+              <input type="number" id="card" min="0">
             </div>
           </div>
           <!-- bonus points -->
@@ -159,7 +159,7 @@
               <label lang="fr" for="bonus" class="text-right middle">PV bonus</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="bonus" min="0" data-index="14">
+              <input type="number" id="bonus" min="0">
             </div>
           </div>
           <!-- number of begging cards -->
@@ -169,7 +169,7 @@
               <label lang="fr" for="begging" class="text-right middle">Nombre de cartes de mendicit&eacute;</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="begging" min="0" data-index="15">
+              <input type="number" id="begging" min="0">
             </div>
           </div>
         </div>
