--- a/68448.html
+++ b/68448.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="coins" class="text-right middle">Nombre de pi&egrave;ces</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="coins" min="0" data-index="01">
+              <input type="number" id="coins" min="0">
             </div>
           </div>
           <!-- military -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="military" class="text-right middle">PV militaires</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="military" data-index="02">
+              <input type="number" id="military">
             </div>
           </div>
           <!-- wonder -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="wonder" class="text-right middle">PV de la merveille</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="wonder" min="0" data-index="03">
+              <input type="number" id="wonder" min="0">
             </div>
           </div>
           <!-- civilian -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="civilian" class="text-right middle">PV civils</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="civilian" min="0" data-index="04">
+              <input type="number" id="civilian" min="0">
             </div>
           </div>
           <!-- commercial -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="commercial" class="text-right middle">PV commerciaux</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="commercial" min="0" data-index="05">
+              <input type="number" id="commercial" min="0">
             </div>
           </div>
           <!-- guild -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="guild" class="text-right middle">PV des guildes</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="guild" min="0" data-index="06">
+              <input type="number" id="guild" min="0">
             </div>
           </div>
           <!-- scientific -->
@@ -96,7 +96,7 @@
                 <label lang="fr" for="tablets" class="text-right middle">Nombre de tablettes</label>
               </div>
               <div class="small-3 cell">
-                <select id="tablets" data-init="0/0/4" data-index="07"><!-- dynamic --></select>
+                <input type="number" id="tablets" min="0" max="4">
               </div>
             </div>
             <!-- scientific (compasses) -->
@@ -106,7 +106,7 @@
                 <label lang="fr" for="compasses" class="text-right middle">Nombre de compas</label>
               </div>
               <div class="small-3 cell">
-                <select id="compasses" data-init="0/0/4" data-index="08"><!-- dynamic --></select>
+                <input type="number" id="compasses" min="0" max="4">
               </div>
             </div>
             <!-- scientific (gears) -->
@@ -116,7 +116,7 @@
                 <label lang="fr" for="gears" class="text-right middle">Nombre d'engrenages</label>
               </div>
               <div class="small-3 cell">
-                <select id="gears" data-init="0/0/4" data-index="09"><!-- dynamic --></select>
+                <input type="number" id="gears" min="0" max="4">
               </div>
             </div>
             <!-- scientific (wild) -->
@@ -126,7 +126,7 @@
                 <label lang="fr" for="wild" class="text-right middle">Nombre de jokers</label>
               </div>
               <div class="small-3 cell">
-                <select id="wild" data-init="0/0/2" data-index="10"><!-- dynamic --></select>
+                <input type="number" id="wild" min="0" max="2">
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
               <label lang="fr" for="extra" class="text-right middle">PV suppl&eacute;mentaires</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="extra" data-index="11">
+              <input type="number" id="extra">
             </div>
           </div>
         </div>
