--- a/185343.html
+++ b/185343.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="buildings" class="text-right middle">PV des b&acirc;timents</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="buildings" min="0" data-index="01">
+              <input type="number" id="buildings" min="0">
             </div>
           </div>
           <!-- VPs from superprojects -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="projects" class="text-right middle">PV des superprojets</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="projects" min="0" data-index="02">
+              <input type="number" id="projects" min="0">
             </div>
           </div>
           <!-- number of anomalies -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="anomalies" class="text-right middle">Nombre d'anomalies</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="anomalies" min="0" data-index="03">
+              <input type="number" id="anomalies" min="0">
             </div>
           </div>
           <!-- VPs from time travel track -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="travel" class="text-right middle">PV de la piste de voyage temporel</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="travel" data-index="04">
+              <input type="number" id="travel">
             </div>
           </div>
           <!-- VPs from morale track -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="morale" class="text-right middle">PV de la piste de moral</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="morale" data-index="05">
+              <input type="number" id="morale">
             </div>
           </div>
           <!-- number of round breakthroughs -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="breakthroughs1" class="text-right middle">Nombre de d&eacute;couvertes rondes</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="breakthroughs1" min="0" data-index="06">
+              <input type="number" id="breakthroughs1" min="0">
             </div>
           </div>
           <!-- number of triangle breakthroughs -->
@@ -89,7 +89,7 @@
               <label lang="fr" for="breakthroughs2" class="text-right middle">Nombre de d&eacute;couvertes triangulaires</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="breakthroughs2" min="0" data-index="07">
+              <input type="number" id="breakthroughs2" min="0">
             </div>
           </div>
           <!-- number of square breakthroughs -->
@@ -99,7 +99,7 @@
               <label lang="fr" for="breakthroughs3" class="text-right middle">Nombre de d&eacute;couvertes carr&eacute;es</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="breakthroughs3" min="0" data-index="08">
+              <input type="number" id="breakthroughs3" min="0">
             </div>
           </div>
           <!-- VPs tokens -->
@@ -109,7 +109,7 @@
               <label lang="fr" for="tokens" class="text-right middle">PV des jetons</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="tokens" min="-3" data-index="09">
+              <input type="number" id="tokens" min="-3">
             </div>
           </div>
           <!-- number of unfulfilled warp tiles -->
@@ -119,7 +119,7 @@
               <label lang="fr" for="warps" class="text-right middle">Nombre de tuiles vortex</label>
             </div>
             <div class="small-3 cell">
-              <select id="warps" data-init="0/0/9" data-index="10"><!-- dynamic --></select>
+              <input type="number" id="warps" min="0" max="9">
             </div>
           </div>
           <!-- endgame condition 1 -->
