--- a/216132.html
+++ b/216132.html
@@ -29,7 +29,7 @@
               <label lang="fr" for="glory" class="text-right middle">FIXME</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="glory" min="0" data-index="01">
+              <input type="number" id="glory" min="0">
             </div>
           </div>
           <!-- number of basic goods -->
@@ -39,7 +39,7 @@
               <label lang="fr" for="basic" class="text-right middle">Nombre de FIXME</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="basic" min="0" data-index="02">
+              <input type="number" id="basic" min="0">
             </div>
           </div>
           <!-- number of processed goods -->
@@ -49,7 +49,7 @@
               <label lang="fr" for="processed" class="text-right middle">Nombre de FIXME</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="processed" min="0" data-index="03">
+              <input type="number" id="processed" min="0">
             </div>
           </div>
           <!-- amount of money -->
@@ -59,7 +59,7 @@
               <label lang="fr" for="money" class="text-right middle">Argent (&pound;)</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="money" data-index="04">
+              <input type="number" id="money" min="0">
             </div>
           </div>
           <!-- number of hops -->
@@ -69,7 +69,7 @@
               <label lang="fr" for="hops" class="text-right middle">Nombre de houblon</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="hops" min="0" data-index="05">
+              <input type="number" id="hops" min="0">
             </div>
           </div>
           <!-- number of cotton -->
@@ -79,7 +79,7 @@
               <label lang="fr" for="cotton" class="text-right middle">Nombre de coton</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="cotton" min="0" data-index="06">
+              <input type="number" id="cotton" min="0">
             </div>
           </div>
           <!-- number of tobacco -->
@@ -89,7 +89,7 @@
               <label lang="fr" for="tobacco" class="text-right middle">Nombre de tabac</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="tobacco" min="0" data-index="07">
+              <input type="number" id="tobacco" min="0">
             </div>
           </div>
           <!-- number of sugar cane -->
@@ -99,7 +99,7 @@
               <label lang="fr" for="sugar" class="text-right middle">Nombre de canne &agrave; sucre</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="sugar" min="0" data-index="08">
+              <input type="number" id="sugar" min="0">
             </div>
           </div>
           <!-- number of export contracts -->
@@ -109,7 +109,7 @@
               <label lang="fr" for="contracts" class="text-right middle">Nombre de contrats d'export</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="contracts" min="0" data-index="09">
+              <input type="number" id="contracts" min="0">
             </div>
           </div>
           <!-- number of settlements -->
@@ -119,7 +119,7 @@
               <label lang="fr" for="settlements" class="text-right middle">Nombre de FIXME</label>
             </div>
             <div class="small-3 cell">
-              <input type="number" id="settlements" min="0" data-index="10">
+              <input type="number" id="settlements" min="0">
             </div>
           </div>
         </div>
